--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-
+  
+  
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -45,7 +47,8 @@ flutter:
    - images/city.png
    - images/tuk.jpg
    - images/wa.jpg
-
+   - images/smo.png
+   - images/it.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
